--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1197,5 +1197,6 @@
     <string name="change_other_ID_photos">เปลี่ยนแปลงเอกสารบัตรประจำตัวอื่นๆ</string>
     <string name="customer_service">ถ้าต้องการความช่วยเหลือ,กรุณา</string>
     <string name="no_search_match">ไม่เจอการแข่งนี้</string>
+    <string name="register_privacy_policy_promotions">ส่งการอัปเดตและโปรโมชันให้ฉันตาม %S</string>
     <!--F005-->
 </resources>
