--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -45,9 +45,8 @@
     <string name="error_password_format">需使用英数组合的密码</string>
     <string name="register_please_read">请仔细阅读我们的</string>
     <string name="register_responsibilities"><u>博彩责任</u></string>
-    <string name="register_privacy">按照</string>
     <string name="register_privacy_policy">隐私权政策</string>
-    <string name="register_privacy_policy_promotions">向我发送更新和促销信息</string>
+    <string name="register_privacy_policy_promotions">按照%s向我发送更新和促销信息</string>
     <string name="register_over_21">我已满21岁并且已阅读及同意%s</string>
     <string name="register_rules_2nd_half"></string>
     <string name="register_not_ph_official">我不是菲律宾政府或与其相关机构的政府官员或雇员;</string>
