OK-1521联系客服点击后提示跳转地址错误处理 OK-1380存款文本页脚上缺少空格 OK-1520其他投注，点击注单详情页面闪退

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1239,7 +1239,7 @@
     <string name="half_second_short">Hiệp 2</string>
     <string name="unbound_bank_card">Bạn chưa mặc định %1$s</string>
     <string name="change_other_ID_photos">Thay ảnh ID khác</string>
-    <string name="customer_service">Nếu cần trợ giúp, vui lòng</string>
+    <string name="customer_service">Nếu cần trợ giúp, vui lòng&#160;</string>
     <string name="not_sign_up">Chưa có tài khoản</string>
     <string name="no_search_match">Không tìm thấy trận đấu</string>
 </resources>
