--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1253,4 +1253,5 @@
     <string name="customer_service">If you need help, please&#160;</string>
     <string name="not_sign_up">Don\'t have an account yet</string>
     <string name="no_search_match">No matches were found</string>
+    <string name="error_full_name">The name that you entered is not valid</string>
 </resources>
