--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1255,4 +1255,5 @@
     <string name="unbound_bank_card">您尚未绑定%1$s</string>
     <string name="change_other_ID_photos">变更其他证件照</string>
     <string name="customer_service">如需帮助，请</string>
+    <string name="error_full_name">您输入的姓名不正确</string>
 </resources>
