--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -12,7 +12,7 @@
     <string name="message_network_timeout">kết nối mạng vượt quá thời gian, vui lòng thử lại</string>
     <string name="error">Nhắc nhở</string>
     <string name="error_input_amount">Số tiền bạn đã nhập sai hoặc giá trị không hợp lệ</string>
-    <string name="error_input_empty">không thể để trống</string>
+    <string name="error_input_empty">Không thể để trống</string>
     <string name="error_incompatible_format">Các ký tự bạn đã nhập không phù hợp</string>
     <string name="error_identity_photo">Valid ID not uploaded</string>
     <string name="congratulation_win">Xin chúc mừng bạn, đơn cược số đuô: %1$s Chiến thắng: %2$s</string>
@@ -37,7 +37,7 @@
     <string name="error_recommend_code">Mã giới thiệu không tồn tại</string>
     <string name="member_account">Tài khoản</string>
     <string name="hint_member_account">Độ dài từ 4-16 ký tự bao gồm chữ cái và số</string>
-    <string name="error_member_account">Tài khoản từ 4-16 ký tự bao gồm chữ và số</string>
+    <string name="error_member_account">Số tài khoản từ 4 ~ 16 bao gồm chữ số và chữ cái</string>
     <string name="error_register_id_exist">Tên tài khoản đã tồn tại</string>
     <string name="hint_register_password">Độ dài từ 6-20 ký tự bao gồm chữ cái và số</string>
     <string name="error_register_password">Mật khẩu từ 6-20 ký tự bao gồm chữ cái và số</string>
@@ -58,7 +58,7 @@
     <string name="register_recharge_now">Gửi tiền ngay bây giờ</string>
     <string name="confirm_password">Xác nhận mật khẩu</string>
     <string name="hint_confirm_password">Vui lòng nhập lại mật khẩu</string>
-    <string name="error_confirm_password">Mật khẩu đăng nhập 2 lần không đồng nhất</string>
+    <string name="error_confirm_password">Mật khẩu nhập 2 lần không trùng khớp</string>
     <string name="withdrawal_pwd">Mật khẩu rút tiền</string>
     <string name="hint_withdrawal_pwd">Mật khẩu gồm 4 chữ số</string>
     <string name="phone_number">Số điện thoại</string>
@@ -71,7 +71,7 @@
     <string name="hint_e_mail">Vui lòng nhập email</string>
     <string name="error_e_mail">Lỗi định dạng email</string>
     <string name="postal_code">Mã bưu điện</string>
-    <string name="hint_postal_code">Vui lòng nhập mã ZIP</string>
+    <string name="hint_postal_code">Vui lòng nhập mã bưu điện</string>
     <string name="province">Tỉnh</string>
     <string name="hint_province">Vui lòng nhập tỉnh</string>
     <string name="city">Thành phố</string>
