--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -105,7 +105,7 @@
     <string name="hint_real_name">Match the bank account name</string>
     <string name="verification_code">Verification code</string>
     <string name="verification_code_by_sms">SMS verify code</string>
-    <string name="error_verification_code">Registration verification code incorrectly</string>
+    <string name="error_verification_code">CAPTCHA incorrectly</string>
     <string name="hint_verification_code_by_sms">SMS</string>
     <string name="error_verification_code_by_sms">SMS verification code incorrectly</string>
     <string name="get_verification_code">SEND</string>
@@ -114,7 +114,7 @@
     <string name="phone_verify_content">Welcome back to game. Please complete verification for account security.</string>
     <string name="dialog_security_title">Enter code.</string>
     <string name="dialog_security_error">You have entered a wrong verification code.</string>
-    <string name="hint_security_code"><font size="12">Enter Code</font></string>
+    <string name="hint_security_code">Enter Code</string>
     <string name="dialog_security_need_phone">Your personal information is not complete, please contact customer service.</string>
     <string name="btn_agreement">Account Opening Agreement</string>
     <string name="have_account">Already have an account?</string>
@@ -1132,10 +1132,10 @@
     <string name="betting_setting">Betting setting</string>
     <string name="filter">Filter</string>
 
-    <string name="kyc_type">ID Type</string>
+    <string name="kyc_type">ID Type [1]</string>
     <string name="kyc_num">ID Number</string>
     <string name="kyc_upload">Upload Photo</string>
-    <string name="kyc_type2">ID Type 2</string>
+    <string name="kyc_type2">ID Type [2]</string>
     <string name="kyc_num2">ID Number 2</string>
     <string name="kyc_upload2">Upload Photo 2</string>
     <string name="kyc_id_verification">Get Verified</string>
