--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -29,7 +29,7 @@
     <string name="please_input_account">请输入您的会员账号</string>
     <string name="login_password">登录密码</string>
     <string name="remember_password">记住密码</string>
-    <string name="forget_password_question"><u>忘记密码?</u></string>
+    <string name="forget_password_question">忘记密码?</string>
     <string name="desc_forget_password">请联系客服</string>
     <string name="sign_up_know">立即注册</string>
     <string name="not_sign_up">还没有账号,</string>
@@ -114,7 +114,7 @@
     <string name="phone_verify_content">欢迎再次回到游戏，为确保账号使用的安全性，请完成手机验证</string>
     <string name="dialog_security_title">输入验证码</string>
     <string name="dialog_security_error">验证码输入错误</string>
-    <string name="hint_security_code"><font size="12">请输入验证码</font></string>
+    <string name="hint_security_code">请输入验证码</string>
     <string name="dialog_security_need_phone">个人资料不完整，请联系客服</string>
     <string name="btn_agreement">开户协议</string>
     <string name="have_account">已有账号?</string>
