--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1254,4 +1254,5 @@
     <string name="not_sign_up">Don\'t have an account yet</string>
     <string name="no_search_match">No matches were found</string>
     <string name="error_full_name">The name that you entered is not valid</string>
+    <string name="hint_verification_code">Please enter the verification code.</string>
 </resources>
