--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1243,4 +1243,5 @@
     <string name="not_sign_up">Chưa có tài khoản</string>
     <string name="no_search_match">Không tìm thấy trận đấu</string>
     <string name="error_full_name">Họ tên bạn nhập không chính xác</string>
+    <string name="hint_verification_code">Vui lòng nhập mã xác nhận.</string>
 </resources>
