--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1272,4 +1272,5 @@
     <string name="please_enter_question">请描述您遇到的问题</string>
     <string name="getget">"###&#044;###&#044;###&#044;##0&#046;000"</string>
     <string name="error_full_name">The name that you entered is not valid</string>
+    <string name="hint_verification_code">Please enter the verification code.</string>
 </resources>
