--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1255,4 +1255,5 @@
     <string name="no_search_match">No matches were found</string>
     <string name="error_full_name">The name that you entered is not valid</string>
     <string name="hint_verification_code">Please enter the verification code.</string>
+    <string name="hint_game_maintenance">The game is under maintenance, please try again later</string>
 </resources>
