--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1200,5 +1200,6 @@
     <string name="register_privacy_policy_promotions">ส่งการอัปเดตและโปรโมชันให้ฉันตาม %S</string>
     <string name="error_full_name">ชื่อที่คุณป้อนไม่ถูกต้อง</string>
     <string name="hint_verification_code">กรุณากรอกรหัสยืนยัน</string>
+    <string name="hint_game_maintenance">เกมนี้อยู่ระหว่างการปรับปรุง โปรดลองใหม่ภายหลัง</string>
     <!--F005-->
 </resources>
