--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1209,7 +1209,7 @@
     <string name="video">视频</string>
     <string name="anime">动画</string>
 
-    <string name="hint_bet_limit_range">限额%1$s-%2$s</string>
+    <string name="hint_bet_limit_range">限额%1$s</string>
     <string name="submitting">注单提交中</string>
     <string name="bet_receipt_bet_quota_with_sign">投注金额(%s)：</string>
     <string name="bet_receipt_win_quota_with_sign">最高可赢(%s)：</string>
