--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1246,4 +1246,12 @@
     <string name="hint_verification_code">Vui lòng nhập mã xác nhận.</string>
     <string name="please_enter_question">Miêu tả vấn đề bạn gặp phải</string>
     <string name="hint_game_maintenance">Trò chơi này đang được bảo trì, vui lòng thử lại sau</string>
+    <string name="please_get_forget_password">Vui lòng lấy lại mật khẩu OKBet của bạn!</string>
+    <string name="please_set_forget_password">Vui lòng đặt mật khẩu tài khoản mới của bạn!！</string>
+    <string name="new_login_password">Mật khẩu đăng nhập mới</string>
+    <string name="new_login_password_confirm">Xác nhận mật khẩu đăng nhập mới</string>
+    <string name="to_back_login">Quay lại trang đăng nhập</string>
+     <string name="has_send_message_to_phone">Mã xác minh đã gửi đến SĐT của bạn: </string>
+    <string name="get_phone_code">Nhận</string>
+    <string name="reget_phone_code">Nhận lại</string>
 </resources>
