--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,7 +62,7 @@
     <string name="withdrawal_pwd">Withdrawal password</string>
     <string name="hint_withdrawal_pwd">4 digit password</string>
     <string name="phone_number">Phone No.</string>
-    <string name="hint_phone_number">Phone No.</string>
+    <string name="hint_phone_number">Please enter phone number</string>
     <string name="error_phone_number">Phone number formatted incorrectly</string>
     <string name="qq_number">QQ Number</string>
     <string name="hint_qq_number">QQ Account</string>
