--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1202,5 +1202,6 @@
     <string name="hint_verification_code">กรุณากรอกรหัสยืนยัน</string>
     <string name="please_enter_question">กรุณาบอกรายละเอียดปัญหา</string>
     <string name="hint_game_maintenance">เกมนี้อยู่ระหว่างการปรับปรุง โปรดลองใหม่ภายหลัง</string>
+    <string name="error_wechat">ข้อผิดพลาดรูปแบบ WeChat ID</string>
     <!--F005-->
 </resources>
