--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -64,7 +64,7 @@
     <string name="phone_number">Số điện thoại</string>
     <string name="hint_phone_number">Vui lòng nhập số điện thoại</string>
     <string name="error_phone_number">Định dạng số điện thoại không đúng</string>
-    <string name="qq_number">QQsố</string>
+    <string name="qq_number">Số tài khoản QQ</string>
     <string name="hint_qq_number">Vui lòng nhập QQTài khoản</string>
     <string name="error_qq_number">Lỗi định dạng tài khoản QQ</string>
     <string name="e_mail">Email</string>
@@ -1246,4 +1246,5 @@
     <string name="hint_verification_code">Vui lòng nhập mã xác nhận.</string>
     <string name="please_enter_question">Miêu tả vấn đề bạn gặp phải</string>
     <string name="hint_game_maintenance">Trò chơi này đang được bảo trì, vui lòng thử lại sau</string>
+    <string name="error_wechat">Lỗi định dạng ID WeChat</string>
 </resources>
