--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1258,4 +1258,5 @@
     <string name="error_full_name">您输入的姓名不正确</string>
     <string name="hint_verification_code">请输入验证码</string>
     <string name="hint_game_maintenance">该游戏维护中，请稍后尝试</string>
+    <string name="error_wechat">微信ID格式错误</string>
 </resources>
