--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,7 +62,7 @@
     <string name="withdrawal_pwd">Withdrawal password</string>
     <string name="hint_withdrawal_pwd">4 digit password</string>
     <string name="phone_number">Phone No.</string>
-    <string name="hint_phone_number">Please enter phone number</string>
+    <string name="hint_phone_number">Please enter the correct phone number</string>
     <string name="error_phone_number">Phone number formatted incorrectly</string>
     <string name="qq_number">QQ Number</string>
     <string name="hint_qq_number">QQ Account</string>
@@ -1260,7 +1260,11 @@
     <string name="please_get_forget_password">Please retrieve your OKBet password!</string>
     <string name="please_set_forget_password">Please set your new account password!</string>
     <string name="to_back_login">Back to login page</string>
+    <string name="new_login_password">New Login Password</string>
+    <string name="new_login_password_confirm">Confirm new login password</string>
     <string name="has_send_message_to_phone">A verification code has been sent to your phone: </string>
     <string name="get_phone_code">Obtain</string>
     <string name="reget_phone_code">Reacquire</string>
+    <string name="error_confirm_password_forget">Password confirmation does not match</string>
+    <string name="tips_password_success">Password has been changed successfully, please log in again!</string>
 </resources>
