--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1287,5 +1287,6 @@
     <string name="min_bet_format">Min Bet: %s</string>
     <string name="match_live">赛事直播</string>
     <string name="tiger_machine">老虎机</string>
+    <string name="worldcup">世界杯</string>
 
 </resources>
