忘记密码模块[OK-2046] [ok-2031] [OK-2029]          [OK-2037] [OK-2028] 修复完成

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1214,5 +1214,7 @@
     <string name="reget_phone_code">รับใหม่อีกครั้ง</string>
     <string name="error_wechat">ข้อผิดพลาดรูปแบบ WeChat ID</string>
     <string name="comingsoon">เร็วๆ นี้</string>
+    <string name="forget_password">ลืมรหัสผ่าน</string>
+    <string name="member_name">ผู้เล่น</string>
     <!--F005-->
 </resources>
