--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1259,4 +1259,6 @@
     <string name="error_confirm_password_forget">Xác nhận mật khẩu không khớp</string>
     <string name="tips_password_success">Mật khẩu sửa thành công, hãy đăng nhập lại</string>
     <string name="comingsoon">Sắp ra mắt</string>
+    <string name="forget_password">Quên mật khẩu</string>
+    <string name="member_name">Người chơi</string>
 </resources>
