--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1286,4 +1286,6 @@
     <string name="error_wechat">Wechat ID formatted incorrectly</string>
     <string name="min_bet_format">Min Bet: %s</string>
     <string name="comingsoon">Coming soon</string>
+    <string name="forget_password">Forgot Password</string>
+    <string name="member_name">Member</string>
 </resources>
