--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -44,7 +44,7 @@
     <string name="recommend_match">เฉลี่ยรายเดือนของ 10,000 เกมสด</string>
     <string name="recommend_best_odd">อัตราต่อรองที่ดีที่สุด</string>
     <string name="recommend_safe">ปลอดภัย ใช้งานง่าย และรวดเร็ว</string>
-    <string name="text_search">ค้นหา</string>
+    <string name="text_search">ค้นหาการแข่งขัน</string>
     <string name="text_search_history">ประวัติการค้นหา</string>
     <string name="text_clear">ลบล้าง</string>
     <string name="text_top_search">การค้นหายอดนิยม</string>
@@ -330,7 +330,7 @@
     <string name="register_over_21">ฉันอายุ 21 ปีและได้อ่านและยอมรับ %s แล้ว</string>
     <string name="privacy_policy">การคุ้มครองความเป็นส่วนตัว</string>
     <string name="lottery">หวย</string>
-    <string name="sport">พลศึกษา</string>
+    <string name="sport">กีฬา</string>
     <string name="live">คนจริง</string>
     <string name="electric">อิเล็กทรอนิกส์</string>
     <string name="jackpot">หมากรุกและไพ่</string>
@@ -1166,7 +1166,7 @@
     <string name="main_tab_sport">กีฬา</string>
     <string name="main_tab_betlist">เดิมพัน</string>
     <string name="main_tab_mine">ของฉัน</string>
-    <string name="main_tab_home">บ้าน</string>
+    <string name="main_tab_home">หน้าหลัก</string>
     <string name="skin_mode">ผิวหนัง：วัน/คืน</string>
     <string name="download">ดาวน์โหลด</string>
     <string name="live_streaming">ถ่ายทอดสด</string>
@@ -1216,5 +1216,9 @@
     <string name="comingsoon">เร็วๆ นี้</string>
     <string name="forget_password">ลืมรหัสผ่าน</string>
     <string name="member_name">ผู้เล่น</string>
+    <string name="my_favorite_empty">คุณยังไม่ได้บันทึกการแข่ง</string>
+    <string name="not_settled">เดิมพันไม่มั่นคง</string>
+    <string name="login_welcome">Hi, ยินดีต้อนรับสู่ OKbet~</string>
+    <string name="not_sign_up">ยังไม่มีบัญชี</string>
     <!--F005-->
 </resources>
