--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1269,4 +1269,5 @@
     <string name="tips_password_success">Password has been changed successfully, please log in again!</string>
     <string name="error_wechat">Wechat ID formatted incorrectly</string>
     <string name="min_bet_format">Min Bet: %s</string>
+    <string name="home_recommend">RECOMMEND</string>
 </resources>
