--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1270,5 +1270,6 @@
     <string name="tips_password_success">密码已修改成功，请重新登录！</string>
     <string name="error_wechat">微信ID格式错误</string>
     <string name="min_bet_format">最低限额: %s</string>
+    <string name="home_recommend">推荐</string>
 
 </resources>
