--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1295,5 +1295,8 @@
     <string name="collse_live">收起直播</string>
     <string name="expand_live">观看直播</string>
     <string name="enter_live">进入直播间</string>
+    <string name="ou_odd">欧赔率</string>
+    <string name="langugae_setting">语言设置</string>
+    <string name="setting_center">设置中心</string>
 
 </resources>
