--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1289,6 +1289,7 @@
     <string name="tiger_machine">老虎机</string>
     <string name="hot_handicap">热门盘口</string>
     <string name="hot_live_match">热门赛事直播</string>
+    <string name="hot_gaming_electronics">热门电子游戏</string>
     <string name="find_all">查看全部</string>
     <string name="worldcup">世界杯</string>
     <string name="sport_classify">体育分类</string>
