--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1306,5 +1306,6 @@
     <string name="ou_odd">欧赔率</string>
     <string name="langugae_setting">语言设置</string>
     <string name="setting_center">设置中心</string>
-
+    <string name="total_reward_amount">累计头奖金额</string>
+    <string name="hot_elec_game">热门大奖游戏</string>
 </resources>
