--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -920,7 +920,7 @@
     <string name="about_us">关于我们</string>
     <string name="responsible">博彩责任</string>
     <string name="terms_conditions">规则条款</string>
-    <string name="privacy_policy">隐私权条款</string>
+    <string name="privacy_policy">隐私与政策</string>
     <string name="help">是否需要帮助？</string>
     <string name="official_partner">官方合作伙伴</string>
     <string name="faqs">常见问题</string>
