--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -919,7 +919,7 @@
     <string name="other_link">其它相关链接</string>
     <string name="about_us">关于我们</string>
     <string name="responsible">博彩责任</string>
-    <string name="terms_conditions">规则条款</string>
+    <string name="terms_conditions">规则与条款</string>
     <string name="privacy_policy">隐私与政策</string>
     <string name="help">是否需要帮助？</string>
     <string name="official_partner">官方合作伙伴</string>
