--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1274,5 +1274,6 @@
     <string name="forget_password">忘记密码</string>
     <string name="member_name">会员</string>
     <string name="home_recommend">推荐</string>
+    <string name="no_search_match">没有搜索到赛事</string>
 
 </resources>
