首页赛事优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1306,7 +1306,7 @@
     <string name="home_sports">体育</string>
     <string name="home_word_cup">世界杯</string>
     <string name="home_in_play">滚球</string>
-    <string name="home_slot">电子</string>
+    <string name="home_slot">老虎机</string>
     <string name="home_on_game">棋牌</string>
     <string name="ou_odd">欧赔率</string>
     <string name="langugae_setting">语言设置</string>
