1.多语言修改 2.banner前进后退按钮隐藏显示

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1272,5 +1272,30 @@
     <string name="comingsoon">Coming soon</string>
     <string name="forget_password">Forgot Password</string>
     <string name="member_name">Member</string>
-    <string name="home_recommend">RECOMMEND</string>
+    <string name="home_recommend">Popular</string>
+    <string name="match_live">Hot Live</string>
+    <string name="tiger_machine">Slot</string>
+    <string name="hot_handicap">Hot Markets</string>
+    <string name="hot_live_match">Hot Live</string>
+    <string name="hot_gaming_electronics">Hot Slot</string>
+    <string name="hot_poker_game">OKGames</string>
+    <string name="find_all">"More "</string>
+    <string name="check_all">All</string>
+    <string name="worldcup">WC 2022</string>
+    <string name="sport_classify">Sports Classification</string>
+    <string name="check_all_inplay">All</string>
+    <string name="expand_live">Live</string>
+    <string name="home_live">Live</string>
+    <string name="home_sports">Sports</string>
+    <string name="home_word_cup">WC 2022</string>
+    <string name="home_slot">Slot</string>
+    <string name="home_on_game">OK Games</string>
+    <string name="langugae_setting">Language Settings</string>
+    <string name="setting_center">Settings</string>
+    <string name="ou_odd">Euro Odds</string>
+    <string name="home_in_play">In-Play</string>
+    <string name="total_reward_amount">Cumulative jackpot</string>
+    <string name="hot_elec_game">Hot Jackpot Games</string>
+    <string name="go_back_top">Back to top</string>
+    <string name="win_line">1X2</string>
 </resources>
