--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1221,5 +1221,6 @@
     <string name="login_welcome">Hi, ยินดีต้อนรับสู่ OKbet~</string>
     <string name="not_sign_up">ยังไม่มีบัญชี</string>
     <string name="new_games_beta">เกมใหม่เบต้า</string>
+    <string name="match_live">Giải Vô địch Quốc gia Ý</string>
     <!--F005-->
 </resources>
