--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1262,4 +1262,30 @@
     <string name="forget_password">Quên mật khẩu</string>
     <string name="member_name">Người chơi</string>
     <string name="login_welcome">Hi, Chào mừng OKbet~</string>
+    <string name="match_live">Trận đấu live</string>
+    <string name="tiger_machine">Slot</string>
+    <string name="hot_handicap">"Thị trường hot "</string>
+    <string name="hot_live_match">Live Hot</string>
+    <string name="hot_gaming_electronics">Slot Hot</string>
+    <string name="hot_poker_game">OKGames</string>
+    <string name="find_all">Xem thêm</string>
+    <string name="check_all">Tất cả</string>
+    <string name="worldcup">WC 2022</string>
+    <string name="sport_classify">Phân loại thể thao</string>
+    <string name="check_all_inplay">Tất cả</string>
+    <string name="expand_live">Live</string>
+    <string name="home_recommend">Đề xuất</string>
+    <string name="home_live">Live</string>
+    <string name="home_sports">Thể Thao</string>
+    <string name="home_word_cup">WC 2022</string>
+    <string name="home_slot">Slot</string>
+    <string name="home_on_game">OK</string>
+    <string name="langugae_setting">Cài đặt ngôn ngữ</string>
+    <string name="setting_center">Cài đặt</string>
+    <string name="ou_odd">Tỷ lệ cược Châu Âu</string>
+    <string name="home_in_play">Trong trận</string>
+    <string name="total_reward_amount">Jackpot tích luỹ</string>
+    <string name="hot_elec_game">Game thưởng khủng</string>
+    <string name="go_back_top">Về đầu trang</string>
+    <string name="win_line">1X2</string>
 </resources>
