--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1288,34 +1288,37 @@
     <string name="comingsoon">Coming soon</string>
     <string name="forget_password">Forgot Password</string>
     <string name="member_name">Member</string>
-    <string name="match_live">赛事直播</string>
-    <string name="tiger_machine">老虎机</string>
-    <string name="hot_handicap">热门盘口</string>
-    <string name="hot_live_match">热门赛事直播</string>
-    <string name="hot_gaming_electronics">热门电子游戏</string>
-    <string name="hot_poker_game">棋牌游戏</string>
-    <string name="find_all">查看全部</string>
-    <string name="worldcup">世界杯</string>
-    <string name="sport_classify">体育分类</string>
-    <string name="check_all_inplay">查看全部滚球</string>
+    <string name="find_all">"More "</string>
+    <string name="home_word_cup">WC 2022</string>
+    <string name="home_on_game">OK Games</string>
+    <string name="go_back_top">Back to top</string>
+    <string name="win_line">1X2</string>
+    <string name="match_live">Live Matches</string>
+    <string name="tiger_machine">Slot</string>
+    <string name="hot_handicap">Hot Markets</string>
+    <string name="hot_live_match">Hot Live</string>
+    <string name="hot_gaming_electronics">Hot Slot</string>
+    <string name="hot_poker_game">OKGames</string>
+    <string name="check_all">All</string>
+    <string name="worldcup">WC 2022</string>
+    <string name="sport_classify">Sports Classification</string>
+    <string name="check_all_inplay">All</string>
+    <string name="expand_live">Live</string>
+    <string name="home_recommend">Popular</string>
+    <string name="home_live">Live</string>
+    <string name="home_sports">Sports</string>
+    <string name="home_slot">Slot</string>
+    <string name="langugae_setting">Language Settings</string>
+    <string name="setting_center">Settings</string>
+    <string name="ou_odd">Euro Odds</string>
+    <string name="home_in_play">In-Play</string>
+    <string name="total_reward_amount">Cumulative jackpot</string>
+    <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="collse_live">收起直播</string>
-    <string name="expand_live">观看直播</string>
     <string name="enter_live">进入直播间</string>
-    <string name="home_recommend">推荐</string>
-    <string name="home_live">直播</string>
-    <string name="home_sports">体育</string>
-    <string name="home_word_cup">世界杯</string>
-    <string name="home_in_play">滚球</string>
-    <string name="home_slot">老虎机</string>
-    <string name="home_on_game">棋牌</string>
-    <string name="ou_odd">欧赔率</string>
-    <string name="langugae_setting">语言设置</string>
-    <string name="setting_center">设置中心</string>
-    <string name="total_reward_amount">累计头奖金额</string>
-    <string name="hot_elec_game">热门大奖游戏</string>
-    <string name="go_back_top">返回顶部</string>
     <string name="accept_current_odd_to_bet">接受当前赔率下注</string>
     <string name="ou_hdp_hdp">让分盘</string>
     <string name="big_or_small">大小盘</string>
-
+    <string name="please_input_you_account">请输入用户名</string>
+    <string name="error_input_account">用户不存在</string>
 </resources>
