--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1321,4 +1321,6 @@
     <string name="big_or_small">大小盘</string>
     <string name="please_input_you_account">请输入用户名</string>
     <string name="error_input_account">用户不存在</string>
+    <string name="home_all_game">All</string>
+    <string name="home_back">返回</string>
 </resources>
