--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1298,4 +1298,5 @@
     <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="go_back_top">Back to top</string>
     <string name="win_line">1X2</string>
+    <string name="home_all_game">All</string>
 </resources>
