--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1288,4 +1288,5 @@
     <string name="hot_elec_game">Game thưởng khủng</string>
     <string name="go_back_top">Về đầu trang</string>
     <string name="win_line">1X2</string>
+    <string name="draw_name">hòa</string>
 </resources>
