--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1222,5 +1222,6 @@
     <string name="not_sign_up">ยังไม่มีบัญชี</string>
     <string name="new_games_beta">เกมใหม่เบต้า</string>
     <string name="match_live">Giải Vô địch Quốc gia Ý</string>
+    <string name="draw_name">และ</string>
     <!--F005-->
 </resources>
