--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1279,7 +1279,7 @@
     <string name="hot_live_match">Hot Live</string>
     <string name="hot_gaming_electronics">Hot Slot</string>
     <string name="hot_poker_game">OKGames</string>
-    <string name="find_all">"More "</string>
+    <string name="find_all">"More&#160;"</string>
     <string name="check_all">All</string>
     <string name="worldcup">WC 2022</string>
     <string name="sport_classify">Sports Classification</string>
