--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1268,7 +1268,7 @@
     <string name="hot_live_match">Live Hot</string>
     <string name="hot_gaming_electronics">Slot Hot</string>
     <string name="hot_poker_game">OKGames</string>
-    <string name="find_all">Xem thêm</string>
+    <string name="find_all">Xem thêm&#160;</string>
     <string name="check_all">Tất cả</string>
     <string name="worldcup">WC 2022</string>
     <string name="sport_classify">Phân loại thể thao</string>
