--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1287,7 +1287,7 @@
     <string name="sport_classify">体育分类</string>
     <string name="check_all_inplay">查看全部滚球</string>
     <string name="expand_live">观看直播</string>
-    <string name="home_live">Live</string>
+    <string name="home_live">直播</string>
     <string name="home_sports">体育</string>
     <string name="home_word_cup">世界杯</string>
     <string name="home_slot">老虎机</string>
