--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1288,7 +1288,7 @@
     <string name="comingsoon">Coming soon</string>
     <string name="forget_password">Forgot Password</string>
     <string name="member_name">Member</string>
-    <string name="find_all">"More "</string>
+    <string name="find_all">"More&#160;"</string>
     <string name="home_word_cup">WC 2022</string>
     <string name="home_on_game">OK Games</string>
     <string name="go_back_top">Back to top</string>
