--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1314,14 +1314,14 @@
     <string name="home_in_play">In-Play</string>
     <string name="total_reward_amount">Cumulative jackpot</string>
     <string name="hot_elec_game">Hot Jackpot Games</string>
-    <string name="collse_live">收起直播</string>
+    <string name="collse_live">Save live</string>
     <string name="enter_live">进入直播间</string>
-    <string name="accept_current_odd_to_bet">接受当前赔率下注</string>
+    <string name="accept_current_odd_to_bet">Bet at current odds</string>
     <string name="ou_hdp_hdp">让分盘</string>
     <string name="big_or_small">大小盘</string>
     <string name="please_input_you_account">请输入用户名</string>
     <string name="error_input_account">用户不存在</string>
     <string name="home_all_game">All</string>
-    <string name="home_back">返回</string>
+    <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
 </resources>
