--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1324,4 +1324,8 @@
     <string name="home_all_game">All</string>
     <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
+    <string name="your_bet_order_success">您的注单下注成功</string>
+    <string name="your_bet_order_fail">投注失败,赔率己改变</string>
+    <string name="bet_others">下注其他</string>
+    <string name="check_bet_detail">查看注单详情</string>
 </resources>
